# adaptive_quantum_cvrp

./: README.md  paper_analysis.md  pyproject.toml  requirements.txt  run_experiment.py
dummy_tiny_instances/: tiny_3node.vrp
experiments/: run_alm_batch.py  run_alm_experiment.py  run_rl_penalty_learner_experiment.py  run_rl_penalty_learner_q_alm_experiment.py
notes/: full_work.md  why_this_why_this_not.md  work_flow.md
old_code/: readme.md
old_code/alm_option_a/data/: E-n13-k4.sol
old_code/alm_option_a/experiments/: run_alm_batch.py  run_alm_experiment.py
results/alm_option_a/: batch_summary_20250515_100312.txt
results/rl_q_alm_run_1_output/: args_config.json
rl_q_alm_run_1_output/instance_details/: ep3_E-n30-k3_results.json  ep5_E-n23-k3_results.json  ep7_mini-n7-k2_results.json
rl_q_alm_run_longer_output/: args_config.json
src/alm/: alm_optimizer.py  alm_optimizer_quantum.py  subproblem_solvers.py
src/common/: cvrp_evaluator.py  cvrp_instance.py  cvrp_solution.py
src/cvrp_tripartite_solver.egg-info/: PKG-INFO  top_level.txt
src/quantum_alm/: quantum_vqe_runner.py  qubo_formulations.py  qubo_vqe_route_solver.py  solution_decoders.py
src/rl_classical/: alm_penalty_env.py  alm_penalty_env_qubo_vqe.py  penalty_agent.py  penalty_networks.py  replay_buffer.py
tests/alm/: test_alm_optimizer.py  test_subproblem_solvers.py
tests/common/: test_cvrp_instance.py  test_evaluator.py  test_solution.py
tests/rl_classical/: test_alm_penalty_env.py  test_penalty_agent.py  test_penalty_networks.py  test_replay_buffer.py
(+170 files in other folders)
