[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cvrp_tripartite_solver"
version = "0.1.0"
description = "A project to solve CVRP using tripartite methodologies."
# Add other metadata like authors, license, etc., if you wish

[tool.setuptools.packages.find]
where = ["src"] # Tells setuptools to find packages in the src directory

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]